# qilbeeDB

./: .gitignore  CLOUDFRONT_SETUP.md  Cargo.toml  DEPLOYMENT.md  DNS_CONFIGURATION.md  GODADDY_DNS_CONFIGURATION.md  LICENSE  README.md  SECURITY_BOOTSTRAP.md  SECURITY_IMPLEMENTATION.md  cloudfront-config.json  cloudfront-info.txt  mkdocs.yml  monitor-dns.sh  setup-ai-tests.sh  setup-cloudfront.sh  test_api_key_auth.py  test_api_keys.py  test_sdk_api_key_auth.py  test_user_management.py
crates/qilbee-core/: Cargo.toml
crates/qilbee-core/src/: error.rs  id.rs  lib.rs  property.rs  temporal.rs  types.rs
crates/qilbee-graph/: Cargo.toml
crates/qilbee-graph/src/: database.rs  graph.rs  lib.rs  schema.rs
crates/qilbee-memory/: Cargo.toml
crates/qilbee-memory/src/: agent.rs  consolidation.rs  embeddings.rs  episode.rs  lib.rs  llm.rs  storage.rs  types.rs  vector_index.rs
crates/qilbee-protocol/: Cargo.toml
crates/qilbee-protocol/src/: bolt.rs  http.rs  lib.rs  message.rs
crates/qilbee-query/: Cargo.toml
crates/qilbee-query/src/: executor.rs  lexer.rs  lib.rs  parser.rs  planner.rs  simple_parser.rs
crates/qilbee-server/: Cargo.toml
crates/qilbee-server/examples/: test_bootstrap.rs  test_password_validation.rs
crates/qilbee-server/src/: config.rs  http_server.rs  lib.rs  main.rs  server.rs
crates/qilbee-server/src/security/: account_lockout.rs  audit.rs  auth.rs  bootstrap.rs  cors.rs  https.rs  middleware.rs  mod.rs  password.rs  rate_limit.rs  rbac.rs  security_headers.rs  token.rs  token_blacklist.rs  user.rs
crates/qilbee-server/test_auth_data/: IDENTITY
crates/qilbee-storage/: Cargo.toml
crates/qilbee-storage/src/: engine.rs  keys.rs  lib.rs  options.rs  transaction.rs
docs/: README.md  SPECIFICATION.md  index.html  index.md
docs/agent-memory/: consolidation.md  episodes.md  forgetting.md  memory-types.md  overview.md  persistence.md  semantic-search.md  statistics.md
docs/api/: bolt-protocol.md  graph-api.md  http-api.md  memory-api.md
docs/architecture/: bi-temporal.md  memory-engine.md  overview.md  query-engine.md  storage.md
docs/client-libraries/: connections.md  overview.md  python.md
docs/contributing/: setup.md  style.md  testing.md
docs/cypher/: create.md  delete.md  functions.md  introduction.md  limit.md  match.md  orderby.md  return.md  set.md  where.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/graph-operations/: indexes.md  nodes.md  properties.md  relationships.md  transactions.md
docs/operations/: backup.md  deployment.md  docker.md  monitoring.md  performance.md
docs/security/: audit-analysis.md  audit.md  authentication.md  authorization.md  bootstrap.md  overview.md  production-checklist.md  rate-limiting.md
docs/use-cases/: ai-agents.md  knowledge-graphs.md  multi-agent.md  recommendations.md  social-networks.md
python-test/: test_account_lockout.py  test_all_endpoints_rate_limit.py  test_api_key_rotation.py  test_audit_logging.py  test_cors.py  test_https_enforcement.py  test_password_validation.py  test_rate_limit_curl.sh  test_rate_limit_custom_policy.py  test_sdk_audit_logs.py  test_sdk_token_revocation.py  test_security_headers.py  test_verify_rate_limit_login.py
sdks/: SDK_OVERVIEW.md  TESTING.md
sdks/nodejs/: README.md  jest.config.js  package.json
sdks/nodejs/src/: client.ts  exceptions.ts  graph.ts  index.ts  memory.ts  query.ts  types.ts
sdks/python/: PHASE1_COMPLETION_SUMMARY.md  PYPI_PUBLISHING.md  README.md  SECURITY_FIXES.md  SECURITY_IMPLEMENTATION_PLAN.md  pyproject.toml  setup.py
sdks/python/qilbeedb/: __init__.py  auth.py  client.py  exceptions.py  memory.py
sdks/python/qilbeedb.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
sdks/python/tests/: test_auth.py  test_auth_integration.py
src/: lib.rs
todo/: account-lockout.md  audit-logging.md  security-features.md  token-revocation.md
