[package]
name = "qilbeedb"
version = "0.1.0"
edition = "2024"
authors = ["AICUBE TECHNOLOGY LLC"]
license = "Apache-2.0"
repository = "https://github.com/aicube-technology/qilbeedb"
description = "Agent-first graph database for AI applications"

[dependencies]
qilbee-core = { path = "crates/qilbee-core" }
qilbee-storage = { path = "crates/qilbee-storage" }
qilbee-query = { path = "crates/qilbee-query" }
qilbee-graph = { path = "crates/qilbee-graph" }
qilbee-memory = { path = "crates/qilbee-memory" }
qilbee-server = { path = "crates/qilbee-server" }
qilbee-protocol = { path = "crates/qilbee-protocol" }

[dev-dependencies]
tempfile = "3.14"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[workspace]
resolver = "2"
members = [
    "crates/qilbee-core",
    "crates/qilbee-storage",
    "crates/qilbee-query",
    "crates/qilbee-graph",
    "crates/qilbee-memory",
    "crates/qilbee-server",
    "crates/qilbee-protocol",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["AICUBE TECHNOLOGY LLC"]
license = "Apache-2.0"
repository = "https://github.com/aicube-technology/qilbeedb"
description = "Agent-first graph database for AI applications"
keywords = ["graph", "database", "ai", "agents", "knowledge-graph"]
categories = ["database", "data-structures"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.41", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Storage
rocksdb = "0.22"

# Numeric and matrix operations
num-traits = "0.2"
ndarray = "0.16"

# Parsing
logos = "0.15"
lalrpop-util = "0.22"

# Hashing and IDs
uuid = { version = "1.11", features = ["v4", "serde"] }
xxhash-rust = { version = "0.8", features = ["xxh3"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Testing
criterion = "0.5"
proptest = "1.5"
tempfile = "3.14"

# Internal crates
qilbee-core = { path = "crates/qilbee-core" }
qilbee-storage = { path = "crates/qilbee-storage" }
qilbee-query = { path = "crates/qilbee-query" }
qilbee-graph = { path = "crates/qilbee-graph" }
qilbee-memory = { path = "crates/qilbee-memory" }
qilbee-server = { path = "crates/qilbee-server" }
qilbee-protocol = { path = "crates/qilbee-protocol" }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
debug = false

[profile.dev]
opt-level = 0
debug = true

[profile.bench]
lto = true
opt-level = 3
