[package]
name = "qilbee-core"
version.workspace = true
edition = "2024"
authors.workspace = true
license.workspace = true
description = "Core types and traits for QilbeeDB"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
xxhash-rust = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
