[package]
name = "qilbee-query"
version.workspace = true
edition = "2024"
authors.workspace = true
license.workspace = true
description = "Query engine for QilbeeDB (Cypher implementation)"

[dependencies]
qilbee-core = { workspace = true }
qilbee-graph = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
logos = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
